--- a/src/css/Nav.module.css
+++ b/src/css/Nav.module.css
@@ -16,26 +16,33 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 50%;
-
-    font-family:'Louis George Cafe Light';
-    font-size: 20pt;
     box-sizing: border-box;
-
+}
+.active{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-sizing: border-box;
 }
 .link{
+
 text-decoration: none;
+font-family:'Louis George Cafe Light';
+font-size: 20pt;
+padding: 20px;
 color: white;
 overflow: hidden;
 position: relative;
-display: inline-block;
 letter-spacing: 1px;
 user-select:none;
+
 }
+
+
 .link::before{
     content: '';
      position: absolute;
-     top:15px;
+     top:50%;
      width: 105%;
      left: 0;
 
@@ -54,3 +61,112 @@ user-select:none;
     transform-origin: 0% 50%;
     transform: scaleX(1);
   }
+
+.menuBtn{
+  background-color: transparent;
+  border: none;
+  display: none;
+}
+
+
+.menuBtn img{
+    width: 50px;
+    
+  }
+.menuBtn img:hover{
+  cursor: pointer;
+}
+
+
+.exitMenu{
+  color: aliceblue;
+  z-index: 1;
+  font-size: 30pt;
+  position: absolute;
+  top: 1rem;
+  right: 2rem;
+}
+.exitMenu:hover{
+  cursor: pointer;
+  user-select: none;
+}
+
+  /* responsive */
+
+  @media screen and (max-width: 970px) {
+   .container{
+    height: 7vh;
+   } 
+   .links{
+    width: 60%;
+
+    padding: 5px;
+
+   } 
+   .link{
+    font-size: 11pt;
+   }
+   .link::before{
+
+      content: '';
+       position: absolute;
+       top:50%;
+       width: 105%;
+       left: 0;
+  
+     }
+  }
+  
+  @media screen and (max-width: 767px) {
+   .container{
+    max-width: 100%;
+   }
+      
+    .links{
+      width: 60%;
+      position:absolute;
+      width: 100%;
+      height: 60vh;
+      background-color: #1c1c1c;
+      flex-direction: column;
+      padding: 20px;
+      transition: all .2ms;
+    }
+    
+    .active{
+      display: none;
+    }
+
+
+ 
+   .link{
+    margin-top: 40px;
+    display: flex;
+    font-size: 15pt;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 20%;
+    transition: all 500ms ease;
+   }
+
+   .link:hover{
+    background-color: #0f0f0f;
+    color: #ff0000;
+   }
+
+   .link::before {
+   display: none;
+    }
+ 
+   .menuBtn{
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+   }
+
+   
+
+   }
