--- a/src/css/About.module.css
+++ b/src/css/About.module.css
@@ -1,6 +1,7 @@
+
 .container {
     background-color: #181818;
-    height: 160vh;
+    height: 110vh;
     width: 100%;
     color: white;
     user-select:none;
@@ -8,144 +9,63 @@
 
 }
 
-.content {
+.ancla{
 
-    background-color: #980222;
+    position: relative;
+    top: 5vh;
+    padding-top: 15vh;
+}
+.content{
+    display: flex;
+   font-family: 'Louis George Cafe';
+   font-weight: bold;
+    justify-content: space-around;
+    text-align: center;
 
 }
 
-.image {
-    width: 100%;
-}
 
-.ancla {
-    position: absolute;
-    top: 20rem;
-    color: #980222;
-}
 
-.info {
 
+/*?-----------------------------CARDS*/
+.card{
+    background-color: black;
+    width: 30%;
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -300px;
-    height: 900px;
-    position: relative;
+    color: #9e102e;
+    font-size: 40pt;
 }
-
-.left {
-    background-image: url('./images/infocat.jpg');
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: Louis George Cafe Light;
-    background-color: #181818;
-    width: 500px;
-    height: 762px;
-    padding: 50px 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    text-align: center;
-}
-
-.left h4 {
-    position: relative;
-    font-size: 15pt;
-    margin-top: 50px;
-
-}
-
-.right {
-
-    margin-left: 100px;
-    width: 35%;
-    height: 762px;
-    display: grid;
-    justify-content: space-between;
-    align-items: center;
-    grid-template-columns: auto auto
-}
-
-.cards {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    width: 800px;
-    height: 762px;
-}
-
-.cardsTop {
-    display: flex;
-    width: 100%;
-
-    justify-content: space-between;
-}
-
-.cardsBot {
-    display: flex;
-    width: 100%;
-   
-    justify-content: space-between;
-}
-
 
 .card {
-
-    color: #181818;
-    height: 350px;
-    width: 350px;
-    font-family: Olympus mount;
-
-
-}
-
-
-.cardsBot .card,
-.cardsTop .card {
     float: left;
     perspective: 800px;
     transition: all 0.5s ease 0s;
    
 
 }
-
-.cardsBot .card:focus .box,
-.cardsTop .card:focus .box {
+.card:hover .box {
+    cursor: pointer;
+}
+.card:focus .box {
     transform: rotateY(180deg);
 
 
 }
-.cardsBot .card:hover .box .front,
-.cardsTop .card:hover .box .front {
-    cursor: pointer;
-}
-
 .box {
-
-    background-color: white;
     cursor: default;
-    height: 350px;
     transform-style: preserve-3d;
     transition: transform 0.4s ease 0s;
+    height: 100%;
     width: 100%;
     -webkit-animation: giro 1s 1;
     animation: giro 1s 1;
 
 }
-
 .box .front {
-    background-image: url('../css/images/cardFront.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     backface-visibility: hidden;
-
-    color: rgb(0, 0, 0);
     font-size: 30pt;
     height: 100%;
     padding: 0.8em;
@@ -156,38 +76,84 @@
     justify-content: center;
     align-items: center;
 }
-
 .box .back {
   
     backface-visibility: hidden;
     font-family:Louis George Cafe Light;
-    background-color: #181818;
-    color: rgb(255, 255, 255);
+
+   
     font-size: 30pt;
-    height: 100%;
+
     padding: 10px;
 
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-   align-items: center;
+    align-items: center;
     text-align: center;
 }
-
 .box .back {
     transform: rotateY(180deg);
 }
 
 
-.text {
+/*?-----------------------------CARDS*/
+
+.card2{
+    background-color: black;
     display: flex;
-    font-size: 12pt;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-    margin-top: 10px;
+    width: 30%;
+    height: 80vh;
+    color: #9e102e;
+    font-size: 40pt;
 }
-.back img {
-   width: 50px;
+
+.card3{
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 80vh;
+    color: #9e102e;
+    font-size: 40pt;
 }
+
+
+
+
+
+
+
+
+/* RESPONSIVE */
+
+@media screen and (max-width: 970px) {
+  
+    .container{
+        min-height: 100vh;
+        max-width: 970px;
+    } 
+    .links{
+     width: 60%;
+ 
+     padding: 5px;
+ 
+    } 
+    .link{
+     font-size: 11pt;
+    }
+    .link::before{
+ 
+       content: '';
+        position: absolute;
+        top:50%;
+        width: 105%;
+        left: 0;
+   
+      }
+   }
 
