--- a/src/css/Banner.module.css
+++ b/src/css/Banner.module.css
@@ -1,18 +1,28 @@
 .banner {
     padding-top: 10vh;
     height: 100vh;
+    width: 100%;
     background-color: #181818;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-image: url('./images/back1.png');
 
+    background-position: top right;
+    background-repeat: no-repeat;
+    background-size:contain
 }
-
+.cont{
+    display: flex;
+    width: 80%;
+    align-items: center;
+}
 .text {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 50rem;
+    transition: all 500ms ease;
 }
 
 .one {
@@ -21,7 +31,7 @@
     font-size: 80pt;
     letter-spacing: 5px;
 
-
+    transition: all 500ms ease;
 }
 
 
@@ -34,22 +44,10 @@
     position: relative;
     cursor: pointer;
     text-decoration: none;
+    
+    transition: all 500ms ease;
 }
 
-.port:before {
-    content: "PORTFOLIO";
-    position: absolute;
-    color: #980222;
-    top: 0;
-  
-    width: 0%;
-    overflow: hidden;
-    transition: all 0.5s;
-}
-
-.port:hover:before {
-    width: 100%;
-}
 
 
 .middle {
@@ -64,8 +62,53 @@
     font-family: Shockwave;
     color: white;
     font-size: 40pt;
+    
+    transition: all 500ms ease;
 }
 
 .image {
-    width: 600px;
+    width: 800px;
+    -webkit-filter: drop-shadow(5px 5px 5px rgb(0, 0, 0));
+    filter: drop-shadow(5px 5px 5px rgb(0, 0, 0));
 }
+
+
+
+/* RESPONSIVE */
+
+@media screen and (max-width: 970px) {
+    .banner{
+        background-image:none
+    }
+    .container{
+      padding: 20px;
+      max-width: 970px;
+    } 
+    .image{
+        display: none;
+    }
+    
+   }
+   
+   @media screen and (max-width: 767px) {
+    .container{
+      padding: 10px;
+      max-width: 970px;
+      transition: all .2s ease;
+    } 
+    .text {
+        width: 400px;
+    }
+    .one {
+        font-size: 50pt;}
+    .port {
+        font-size: 70pt;
+    }
+    .text h3{
+        font-size:20pt;
+    }
+    .image{
+        display: none;
+    }
+    
+   }
