--- a/src/css/Form.module.css
+++ b/src/css/Form.module.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    user-select:none;
 }
 
 .formContent {
@@ -70,7 +72,8 @@
 
 .regInput input {
     width: 60%;
-    height: 30px;
+    height: 40px;
+    margin-top: -10px;
     background-color: rgb(49, 49, 49);
     color: aliceblue;
     border: none;
@@ -90,6 +93,7 @@
 
 .messageInput textarea {
     border: none;
+    resize: none;
     width: 100%;
     height: 80%;
     font-family: Louis George Cafe;
