--- a/src/css/Landing.module.css
+++ b/src/css/Landing.module.css
@@ -61,4 +61,60 @@ p{
 
 }
 
+/*responsive*/
 
+@media screen and (max-width: 1300px) {
+    .content{
+     width: 90%;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     flex-direction: column;
+     position: relative;  
+    }
+    .title{
+     text-align: center;
+     font-size: 100pt;
+    }
+    p{
+        top: 20%;
+    }
+    }
+@media screen and (max-width: 970px) {
+   .content{
+    width: 90%;
+    padding: 20px;
+      
+   }
+   .title{
+    text-align: center;
+    margin: auto;
+    font-size: 100pt;
+   }
+   p{
+    font-size: 40pt;
+   }
+   }
+   
+   @media screen and (max-width: 480px) {
+    .container{
+        background-image: none;
+    }
+    .content{
+        width: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        position: relative;  
+        padding: 20px;
+       }
+    .title{
+        font-size: 70pt;
+        text-align: center;
+    }
+    p{
+        font-size: 30pt;
+        text-align: center;
+    }
+   }
