--- a/src/css/Nav.module.css
+++ b/src/css/Nav.module.css
@@ -1,5 +1,5 @@
 .container{
-   background-color:rgb(22, 22, 22) ;
+   background-color:rgb(22, 22, 22,0.9) ;
     height: 10vh;
     width: 100%;
     box-sizing: border-box;
@@ -120,6 +120,7 @@ user-select:none;
   @media screen and (max-width: 767px) {
    .container{
     max-width: 100%;
+    z-index: 1;
    }
       
     .links{
@@ -127,7 +128,7 @@ user-select:none;
       position:absolute;
       width: 100%;
       height: 60vh;
-      background-color: #1c1c1c;
+      background-color: #292929e7;
       flex-direction: column;
       padding: 20px;
       transition: all .2ms;
