--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+ 
+
+
 }
 body {
   margin: 0;
@@ -15,4 +18,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+*::-webkit-scrollbar{
+  width: 10px;
+
+  background-color:#181818;
+}
+
+*::-webkit-scrollbar-thumb{
+  background-color:#313131;
+  border-radius: 10px;
+
 }
