--- a/src/css/Form.module.css
+++ b/src/css/Form.module.css
@@ -16,7 +16,7 @@
 }
 
 .formContent .left {
-    background-color: #980222;
+    background-color: #810f28;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -123,4 +123,145 @@
     background-color: #980222;
     color: rgb(255, 255, 255);
     cursor: pointer;
+    cursor: url('./images/pointer.png'), auto;	
 }
+
+/*responsiveee <3*/
+
+@media screen and (max-width: 1550px) {
+
+    .formContent{
+        width: 70%;
+        height: 700px;
+    }
+    .left h1 {
+  
+        font-size: 25pt;
+        letter-spacing: 5px;
+    }
+    .left img {
+        height: 110px;
+    }
+    .regInput {
+
+        width: 400px;
+        font-size: 15pt;
+        margin-top: 50px;
+        display: flex;
+        justify-content: space-between;
+    
+    }
+    
+    .messageInput textarea {
+      
+        width: 90%;
+        height: 80%;
+   
+   
+        margin-top: 10px;
+    
+        font-size: 12pt;
+     
+    }
+   }
+
+   @media screen and (max-width: 1200px) {
+ 
+    
+    .formContent{
+        width: 70%;
+        height: 600px;
+    }
+    .regInput {
+
+        width: 300px;
+        font-size: 12pt;
+        margin-top: 50px;
+        display: flex;
+        justify-content: space-between;
+    
+    }
+    .messageInput {
+
+        font-size: 12pt;
+        width: 400px;
+        height: 250px;
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .formBtn {
+        width: 100px;
+        height: 40px;
+        font-size: 10pt;
+        
+    }
+   
+   }
+   @media screen and (max-width: 950px) {
+ 
+    
+    .formContent{
+        width: 80%;
+        height: 600px;
+    }
+   
+   }
+
+   @media screen and (max-width: 950px) {
+ 
+    
+    .formContent{
+        width: 80%;
+        height: 600px;
+    }
+   
+   }
+   @media screen and (max-width: 850px) {
+ 
+    
+    .formContent{
+        flex-direction: column;
+ 
+        height: 80vh;
+
+       
+    }
+    .form{
+       height: 80vh;
+        width: 100%;
+        border-top: none;
+        border-left: solid 1px rgb(64, 64, 64);
+        
+    }
+    .formContent .left {
+        background-color: #810f28;
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #f7f6f6;
+        width: 100%;
+        height: 20%;
+    }
+    .left h1{
+        margin-top: 10px;
+        font-size: 14pt;
+    }
+
+    .formContent .left .social{
+        width: 70%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .left img{
+        height: 80px;
+        
+    }
+    .regInput  {
+       justify-content: space-around;
+       margin-top: 30px;
+    }
+   }
