--- a/src/css/Projects.module.css
+++ b/src/css/Projects.module.css
@@ -1,7 +1,7 @@
 .container{
     display: flex;
     flex-direction: column;
-    background-color: rgb(24, 24, 24) ;
+    background-color:#810f28 ;
     height: 100vh;
     box-sizing: border-box;
     color :white
