--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 *{
   box-sizing: border-box;
+
   padding: 0;
   margin: 0;
- 
-
+  user-select:none;
+  cursor: url('./css/images/cursor.png'), auto;	
 
 }
 body {
