--- a/src/css/Landing.module.css
+++ b/src/css/Landing.module.css
@@ -20,10 +20,11 @@
     justify-content: center;
     flex-direction: column;
     position: relative;  
+    overflow: hidden;
 }
 .title{
     user-select:none;
-     
+     z-index: 1;
     font-family: Olympus Mount;
     font-size: 150pt;
     letter-spacing: 2px;
@@ -44,6 +45,7 @@
 }
 
 
+
   .title:hover {
     background-position: 0;
     cursor: url('./images/pointer.png'), auto;	
@@ -53,13 +55,69 @@
 p{
     user-select:none;
      
-    font-family: 'Javanese Text';
-    font-size: 50pt;
+    font-family: 'Cambria Math';
+    font-size: 40pt;
     color: white;
     position: absolute;
-    top:15%;
+    top:25%;
     
 
+}
+
+
+.frontLayer,
+.backLayer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.frontLayer{
+    z-index:1;
+}
+.backLayer{
+    z-index: 0;
+}
+
+.frontLayer img,
+.backLayer img{
+    position: absolute ;
+}
+
+.frontLayer img:nth-child(1){
+    top: 5%;
+    left: 5%;
+    width: 16%;
+}
+.frontLayer img:nth-child(2){
+    top: 8%;
+    right: 10%;
+    width: 13%;
+}
+
+.frontLayer img:nth-child(3){
+    bottom: 5%;
+    left: 20%;
+    width: 10%;
+}
+.frontLayer img:nth-child(4){
+    bottom: 2%;
+    right: 10%;
+    width: 15%;
+}
+
+.backLayer img:nth-child(1){
+    top: -15%;
+    left: -10%;
+    width: 28%;
+}
+.backLayer img:nth-child(2){
+    top: 2%;
+    right: -5%;
+    width: 35%;
 }
 
 /*responsive*/
