--- a/src/css/Projects.module.css
+++ b/src/css/Projects.module.css
@@ -1,8 +1,111 @@
-.container{
+.container {
+    background-color: #810f28;
+    height: 110vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+.cardsCont {
+
+    display: flex;
+    justify-content: space-around;
+    width: 90%;
+    height: 50%;
+    
+}
+
+.card {
+    position: relative;
+    background-color: #181818;
+    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
+}
+
+.description{
+    padding: 20px;
     display: flex;
     flex-direction: column;
-    background-color:#810f28 ;
-    height: 100vh;
-    box-sizing: border-box;
-    color :white
+    align-items: center;
+    justify-content: space-betweens;
+}
+
+.title{
+    font-family: 'Louis George Cafe';
+    color: white;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+}
+.info{
+    width: 100%;
+}
+
+.text{
+
+margin-top: 5px;
+color: white;
+font-family: 'Louis George Cafe';
+font-weight: lighter;
+font-size: 15pt;
+}
+
+.links{
+    position: absolute;
+    
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 70px;
+    height: 130px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-bottom-left-radius: 10px;
+    padding-left: 5px;
+    right: 0;
+    top: 0;
+    z-index: 1;
+}
+.links a {
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+}
+.links a img {
+    width: 70%;
+  
+}
+
+
+.links a img:hover {
+    width: 90%;
+}
+
+.video{
+   
+width: 500px;
+}
+@media screen and (max-width: 1200px) {
+ 
+    .video{
+        width: 400px;
+    }
+   
+   
+
+}
+@media screen and (max-width: 918px) {
+ 
+   
+    .cardsCont {
+        flex-direction: column;
+        align-items: center;
+    }
+    .card{
+        margin-top: 20px;
+        width: 400px;
+    }
+   
+
 }
