--- a/src/css/Landing.module.css
+++ b/src/css/Landing.module.css
@@ -1,4 +1,11 @@
 
+@font-face { font-family: Olympus Mount; 
+    
+    src: url('./fonts/OLYMPUS\ MOUNT.TTF')
+   ;
+  
+ }
+ 
 .container{
     min-height: 100vh;
     width: 100%;
