--- a/src/css/Nav.module.css
+++ b/src/css/Nav.module.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: Louis George Cafea;
+  src: url('./fonts/LOUIS\ GEORGE\ CAFE\ LIGHT.TTF')
+}
 .container{
    background-color:rgb(22, 22, 22,0.9) ;
     height: 10vh;
