--- a/src/css/About.module.css
+++ b/src/css/About.module.css
@@ -1,4 +1,8 @@
 
+@font-face {
+    font-family: Louis George Cafea;
+    src: url('./fonts/LOUIS\ GEORGE\ CAFE\ LIGHT.TTF')
+}
 .container {
     background-color: #181818;
     height: 110vh;
