--- a/src/css/Form.module.css
+++ b/src/css/Form.module.css
@@ -265,3 +265,9 @@
        margin-top: 30px;
     }
    }
+
+   @media screen and (max-width: 480px) {
+    .messageInput {
+        width: 80%;
+    }
+   }
