--- a/src/css/Landing.module.css
+++ b/src/css/Landing.module.css
@@ -5,7 +5,7 @@
    ;
   
  }
- 
+
 .container{
     min-height: 100vh;
     width: 100%;
@@ -163,24 +163,33 @@ p{
    }
    
    @media screen and (max-width: 480px) {
-    .container{
-        background-image: none;
-    }
+  
     .content{
-        width: 70%;
+        width: 100%;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-around;
         flex-direction: column;
-        position: relative;  
-        padding: 20px;
+
+     
        }
     .title{
-        font-size: 70pt;
+        font-size: 60pt;
         text-align: center;
     }
     p{
-        font-size: 30pt;
+        font-size: 25pt;
         text-align: center;
+        margin-top: 90px;
+    }
+    .backLayer img:nth-child(1){
+        top: -10%;
+        left: -15%;
+        width: 58%;
+    }
+    .backLayer img:nth-child(2){
+        top: 0%;
+        right: -20%;
+        width: 80%;
     }
    }
