arreglos responsive 350px

--- a/src/css/Nav.module.css
+++ b/src/css/Nav.module.css
@@ -175,3 +175,12 @@ user-select:none;
    
 
    }
+   @media screen and (max-width: 480px)  {
+    .menuBtn{
+      width: 20%;
+      
+    }
+    .menuBtn img {
+      width: 50%;
+    }
+   }
