--- a/src/css/About.module.css
+++ b/src/css/About.module.css
@@ -126,7 +126,7 @@
 @media screen and (max-width: 970px) {
   .container {
     background-color: #181818;
-    min-height: 150vh;
+
     width: 100%;
     color: white;
     user-select:none;
@@ -150,7 +150,7 @@
 
 .card{
     width: 80%;
-    height: 35vh;
+    height: 45vh;
     display: flex;
     margin-top: 5px;
     align-items: center;
@@ -188,6 +188,12 @@
 
    }
    @media screen and (max-width: 1120px) {
+    .red{
+        min-height: 160vh;
+    }
+    .container{
+        min-height: 160vh;
+    }
     .box .back {
 
         padding-top: 20px;
@@ -200,7 +206,18 @@
  
    }
    @media screen and (max-width: 480px) {
+    .container{
+        min-height: 150vh;
+    }
     .backText{
         line-height:20px
+    }
+   }
+   @media screen and (max-width: 350px) {
+    .container{
+        min-height: 150vh;
+    }
+    .backText{
+        line-height:15px
     }
    }
