--- a/src/css/Banner.module.css
+++ b/src/css/Banner.module.css
@@ -11,7 +11,7 @@
     justify-content: space-around;
     align-items: center;
     background-image: url('./images/back1.png');
-
+    overflow: hidden;
     background-position: top right;
     background-repeat: no-repeat;
     background-size:contain
@@ -140,3 +140,24 @@
         font-size:10pt;
     }
    }
+   @media screen and (max-width: 350px) {
+    .one {
+        font-size: 20pt;}
+    .port {
+        font-size: 35.5pt;
+    }
+    .text h3{
+        font-size:10pt;
+    }
+    .middle{
+        width:50%;
+        height:60px;
+    }
+    .middle h3{
+        font-size: 15pt;
+    }
+    .middle img{
+        width: 10%;
+    }
+   }
+
