--- a/src/css/Form.module.css
+++ b/src/css/Form.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    user-select:none;
+    user-select: none;
 }
 
 .formContent {
@@ -123,25 +123,28 @@
     background-color: #980222;
     color: rgb(255, 255, 255);
     cursor: pointer;
-    cursor: url('./images/pointer.png'), auto;	
+    cursor: url('./images/pointer.png'), auto;
 }
 
 /*responsiveee <3*/
 
 @media screen and (max-width: 1550px) {
 
-    .formContent{
+    .formContent {
         width: 70%;
         height: 700px;
     }
+
     .left h1 {
-  
+
         font-size: 25pt;
         letter-spacing: 5px;
     }
+
     .left img {
         height: 110px;
     }
+
     .regInput {
 
         width: 400px;
@@ -149,29 +152,30 @@
         margin-top: 50px;
         display: flex;
         justify-content: space-between;
-    
+
     }
-    
+
     .messageInput textarea {
-      
+
         width: 90%;
         height: 80%;
-   
-   
-        margin-top: 10px;
-    
-        font-size: 12pt;
-     
-    }
-   }
 
-   @media screen and (max-width: 1200px) {
- 
-    
-    .formContent{
+
+        margin-top: 10px;
+
+        font-size: 12pt;
+
+    }
+}
+
+@media screen and (max-width: 1200px) {
+
+
+    .formContent {
         width: 70%;
         height: 600px;
     }
+
     .regInput {
 
         width: 300px;
@@ -179,8 +183,9 @@
         margin-top: 50px;
         display: flex;
         justify-content: space-between;
-    
+
     }
+
     .messageInput {
 
         font-size: 12pt;
@@ -191,53 +196,58 @@
         flex-direction: column;
         align-items: center;
     }
+
     .formBtn {
         width: 100px;
         height: 40px;
         font-size: 10pt;
-        
-    }
-   
-   }
-   @media screen and (max-width: 950px) {
- 
-    
-    .formContent{
-        width: 80%;
-        height: 600px;
-    }
-   
-   }
 
-   @media screen and (max-width: 950px) {
- 
-    
-    .formContent{
+    }
+
+}
+
+@media screen and (max-width: 950px) {
+
+
+    .formContent {
         width: 80%;
         height: 600px;
     }
-   
-   }
-   @media screen and (max-width: 850px) {
- 
-    
-    .formContent{
+
+}
+
+@media screen and (max-width: 950px) {
+
+
+    .formContent {
+        width: 80%;
+        height: 600px;
+    }
+
+}
+
+@media screen and (max-width: 850px) {
+
+
+    .formContent {
         flex-direction: column;
- 
+
         height: 80vh;
 
-       
+
     }
-    .form{
-       height: 80vh;
+
+    .form {
+        height: 80vh;
         width: 100%;
         border-top: none;
         border-left: solid 1px rgb(64, 64, 64);
-        
+
     }
+
     .formContent .left {
         background-color: #810f28;
-        
+
         display: flex;
         justify-content: center;
         align-items: center;
@@ -245,29 +255,74 @@
         width: 100%;
         height: 20%;
     }
-    .left h1{
+
+    .left h1 {
         margin-top: 10px;
         font-size: 14pt;
     }
 
-    .formContent .left .social{
+    .formContent .left .social {
         width: 70%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
-    .left img{
-        height: 80px;
-        
-    }
-    .regInput  {
-       justify-content: space-around;
-       margin-top: 30px;
-    }
-   }
 
-   @media screen and (max-width: 480px) {
+    .left img {
+        height: 80px;
+
+    }
+
+    .regInput {
+        justify-content: space-around;
+        margin-top: 30px;
+    }
+}
+
+@media screen and (max-width: 480px) {
     .messageInput {
         width: 80%;
     }
-   }
+
+    .left img {
+        height: 70px;
+
+    }
+}
+
+@media screen and (max-width: 350px) {
+
+    .social{
+        min-width: 150%;
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    .left img {
+        height: 50px;
+
+    }
+    .messageInput {
+        width: 80%;
+        height: 20%;
+    }
+    .regInput{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        min-height: 15%;
+    }
+    
+    .form input{
+       width: 50%;
+
+    }
+    .form label {
+        font-size: 10pt;
+ 
+    }
+    .formBtn{
+        height: 25px;
+        margin-top: 10px;
+    }
+}
