--- a/src/css/About.module.css
+++ b/src/css/About.module.css
@@ -214,8 +214,14 @@
     }
    }
    @media screen and (max-width: 350px) {
+    .red{
+        min-height: 200vh;
+    }
     .container{
-        min-height: 150vh;
+        min-height: 200vh;
+    }
+    .card{
+        height: 300px;
     }
     .backText{
         line-height:15px
