--- a/src/css/Landing.module.css
+++ b/src/css/Landing.module.css
@@ -5,7 +5,7 @@
    ;
   
  }
-
+ @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap');
 .container{
     min-height: 100vh;
     width: 100%;
@@ -62,7 +62,7 @@
 p{
     user-select:none;
      
-    font-family: 'Cambria Math';
+    font-family: 'Noto Serif Ahom', serif;
     font-size: 40pt;
     color: white;
     position: absolute;
@@ -193,3 +193,19 @@ p{
         width: 80%;
     }
    }
+
+   @media screen and (max-width:350px) {
+    
+    .title{
+     text-align: center;
+     font-size: 30pt;
+    }
+    .title:hover{
+        letter-spacing: 2px;
+    }
+    p{
+        font-size: 20pt;
+        top: 20%;
+    }
+    
+    }
