--- a/src/css/Stack.module.css
+++ b/src/css/Stack.module.css
@@ -1,5 +1,5 @@
 .container{
-    min-height: 30vh;
+    min-height: 40vh;
     width: 100vw;
     background-color: #810f28;
     display: flex;
@@ -23,7 +23,9 @@
   }
  }
 @media screen and (max-width:480px) {
-
+.ancla{
+    top: 270%;
+}
     .container{
         min-height: 60vh;
     }
