--- a/src/css/Form.module.css
+++ b/src/css/Form.module.css
@@ -55,7 +55,7 @@
     font-weight: bold;
     display: flex;
     flex-direction: column;
-
+    position: relative;
     align-items: center;
 
 }
@@ -125,6 +125,17 @@
     cursor: pointer;
     cursor: url('./images/pointer.png'), auto;
 }
+
+.mailError{
+    background-color: #810f28;
+position: absolute;
+bottom: 8%;
+right: 8%;
+color: rgb(255, 255, 255);
+padding: 5px;
+border-radius: 10px;
+}
+
 
 /*responsiveee <3*/
 
