--- a/src/css/Nav.module.css
+++ b/src/css/Nav.module.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: Louis George Cafea;
+  font-family:Louis George Cafe Light;
   src: url('./fonts/LOUIS\ GEORGE\ CAFE\ LIGHT.TTF')
 }
 .container{
