--- a/src/css/About.module.css
+++ b/src/css/About.module.css
@@ -1,6 +1,6 @@
 
 @font-face {
-    font-family: Louis George Cafea;
+    font-family: Louis George Cafe Light;
     src: url('./fonts/LOUIS\ GEORGE\ CAFE\ LIGHT.TTF')
 }
 .container {
