--- a/src/css/Contact.module.css
+++ b/src/css/Contact.module.css
@@ -1,10 +1,56 @@
 .container {
+    margin-top: -1px;
+    position: relative;
     display: flex;
     width: 100%;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     background-color: rgb(24, 24, 24);
     height: 120vh;
     color: white;
     
+}
+.social {
+    padding: 1rem;
+    box-sizing: border-box;
+    border-radius: 10px;
+    position: absolute;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    left: 10%;
+    height: 30%;
+}
+
+.social  img {
+    width: 80px;
+    margin: 0 10px;
+}
+
+@media screen and (max-width: 900px){
+
+    .social{
+        position: relative;
+        flex-direction: row;
+        align-self: ce
+        ;
+        width: 100%;
+        height: 20%;
+        left:0 ;
+        bottom: 0%;
+        margin: 0 0;
+    }
+    .social img{
+        width: 30%;
+        
+    }
+}
+@media screen and (max-width: 450px){
+    
+    .social img{
+        width: 60%;
+        
+    }
 }
