remodelación css + responsive

--- a/src/css/About.module.css
+++ b/src/css/About.module.css
@@ -55,7 +55,7 @@
 
 .cv{
   background-color:#980222 ;
-  width: 10%;
+  width: 200px;
   margin-top: 5%;
   height: 50px;
   text-decoration: none;
