--- a/src/css/Projects.module.css
+++ b/src/css/Projects.module.css
@@ -95,7 +95,7 @@
     box-sizing: border-box;
     display: flex;
     height: 100%;
-    width: 50%;
+    width: 200px;
     text-decoration: none;
     color: white;
     font-size: 14pt;
