--- a/src/css/About.module.css
+++ b/src/css/About.module.css
@@ -16,7 +16,11 @@
 }
 
 .content{
-    display: flex;
+    display: flex; 
+    
+}
+.line {
+    border-color: #9802227e;
 }
 .ancla {
     position: absolute;
@@ -24,7 +28,7 @@
 }
 
 .card1 {
-
+   align-self: start;
     width: 100%;
     display: grid;
     align-items: center;
@@ -68,7 +72,6 @@
 }
 
 .cv:hover{
-    cursor: url('./images/pointer.png'), auto;
     border-radius: 10px;
 }
 @media screen and (max-width: 1200px) {
