--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   padding: 0;
   margin: 0;
   user-select:none;
-  cursor: url('./css/images/cursor.png'), auto;	
+  /* cursor: url('./css/images/cursor.png'), auto;	 */
 
 }
 body {
